# bareon-ironic

./: .gitignore  .gitreview  .testr.conf  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
bareon_ironic/: bareon.py  exception.py  version.py
bareon_ironic/common/: ssh_utils.py  subproc_utils.py
bareon_ironic/modules/: bareon_base.py  bareon_config.template  bareon_config_live.template  bareon_exception.py  bareon_rsync.py  bareon_swift.py  bareon_utils.py
bareon_ironic/modules/resources/: actions.py  image_service.py  resources.py  rsync.py
bareon_ironic/tests/: __init__.py  base.py  test_dummy.py
bareon_ironic/tests/common/: test_ssh_utils.py  test_subproc_utils.py
bareon_ironic/tests/modules/: test_bareon_base.py  test_bareon_utils.py
doc/: Makefile
doc/source/: conf.py  index.rst  install-guide.rst  user-guide.rst
etc/ironic/: ironic.conf.bareon_sample
patches/: patch-ironic-stable-kilo  patch-ironic-stable-liberty  patch-nova-stable-kilo  patch-nova-stable-liberty
patches/mitaka/ironic/: 0000.patch
patches/mitaka/nova/: 0000.patch
patches/newton/ironic/: 0000.patch  0001-Makes-vendor_passthru-pass_deploy_info-method-public.patch  0003-Allow-access-to-bareon-ironic-vendor-passthru-API-en.patch
patches/newton/nova/: 0000.patch
