[metadata]
name = bareon-ironic
version = 1.0.0
author = Cray Inc.
summary = Bareon-based deployment driver for Ironic
classifier =
    Programming Language :: Python

[files]
packages =
    bareon_ironic

extra_files =
    bareon_ironic/modules/bareon_config.template
    bareon_ironic/modules/bareon_config_live.template


[entry_points]
ironic.drivers =
    bare_swift_ssh = bareon_ironic.bareon:BareonSwiftAndSSHDriver
    bare_swift_ipmi = bareon_ironic.bareon:BareonSwiftAndIPMIToolDriver
    bare_rsync_ssh = bareon_ironic.bareon:BareonRsyncAndSSHDriver
    bare_rsync_ipmi = bareon_ironic.bareon:BareonRsyncAndIPMIToolDriver
